--- a/platforms/cuda/src/CudaCoulKernelSources.cpp.in
+++ b/platforms/cuda/src/CudaCoulKernelSources.cpp.in
@@ -1,4 +1,4 @@
-#include "CudaCosAccKernelSources.h"
+#include "CudaCoulKernelSources.h"
 
-using namespace CosAccPlugin;
+using namespace CoulPlugin;
 using namespace std;
